# pytabula

./: .gitignore  LICENSE  README.md  _config.yml  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
assets/css/: style.scss
src/pytable/: __init__.py  abc.py  table.py
src/pytabula/: __init__.py  abc.py  table.py
tests/: test_table.py
