[tool.poetry]
name = "pytable"
version = "0.1.0"
description = ""
authors = ["Genadij Razdorov <genadijrazdorov@gmail.com>"]
readme = "README.md"
packages = [{include = "pytable", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
