[tool.poetry]
name = "pytabula"
version = "0.2.0"
description = "A minimal Python table extension"
authors = ["Genadij Razdorov <genadijrazdorov@gmail.com>"]
readme = "README.md"
packages = [{include = "pytabula", from = "src"}]
license = "MIT"
repository = "https://github.com/genadijrazdorov/pytabula"
homepage = "https://github.com/genadijrazdorov/pytabula"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
jupyter-console = "^6.6.3"


[tool.pytest.ini_options]
addopts = "--doctest-glob=*.md --doctest-modules"


[tool.coverage.run]
source = ["pytabula"]
command_line = "-m pytest -v"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
